# Policy-Rate-Monitor-PYTHON

./: .flake8  .gitignore  README.md  addendum-readme.md  pyproject.toml
.github/workflows/: cross-check.yml
scripts/: cross_check.py
src/bis_prates/: __init__.py  cli.py  codelists.py  fetch.py  parse.py  report.py  speeches.py  transform.py
tests/: conftest.py  test_cli.py  test_codelists.py  test_dedupe.py  test_fetch.py  test_parse.py  test_report.py  test_speeches.py  test_transform.py
