[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bis-prates"
version = "0.1.0"
description = "BIS Policy Rate Monitor — fetch, tidy, and report central bank policy rates"
authors = [{name = "Darren Dignam", email = "darren.dignam@protonmail.ch"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pydantic>=2.5",
    "pysdmx[json]>=1.16",
]

[project.optional-dependencies]
speeches = ["gingado>=0.2"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "mypy>=1.7",
]

[project.scripts]
bis-prates = "bis_prates.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=bis_prates"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
